# tauri-plugin-window-controls

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: publish.yml
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: enable_snap.toml  get_glyph_path.toml  window_command.toml  window_state.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  ext.rs  lib.rs  models.rs
src/windows/: mod.rs
src/windows/glyph/: font.rs  mod.rs  outline.rs  path.rs
src/windows/overlay/: controls.js  mod.rs  snap.rs
