[package]
name = "tauri-plugin-window-controls"
version = "0.1.0"
authors = ["insd47"]
description = "Native Windows 11 caption controls (minimize/maximize/close) with snap-layout support for Tauri windows."
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
readme = "README.md"
keywords = ["tauri", "windows", "titlebar", "caption", "snap"]
categories = ["gui", "os::windows-apis", "api-bindings"]
links = "tauri-plugin-window-controls"

[dependencies]
tauri = { version = "2.11.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Graphics_DirectWrite", "Win32_Graphics_Direct2D_Common"] }
windows-core = "0.62.2"
windows-numerics = "0.3.1"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }
